Fix inset and spacing with multiple attachments

--- a/app/javascript/styles/mods/display_fullmedia.css
+++ b/app/javascript/styles/mods/display_fullmedia.css
@@ -26,4 +26,6 @@ source: https://userstyles.org/styles/167207 [in part]
     width: 100% !important;
     height: 100% !important;
     max-height: 100% !important;
+    inset: 0 !important;
+    margin-bottom: 4px;
 }
